--- a/baxter_stt/sphinx4-1.0beta6/README
+++ b/baxter_stt/sphinx4-1.0beta6/README
@@ -8,6 +8,8 @@ To issue a command to Baxter, run stt.py. You will then be prompted to speak.
 
 The current corpus is located in src/apps/edu/cmu/sphinx/demo/baxter/baxter_corpus.txt. Either create a corpus of your own or add to this one, and use CMU's Sphinx knowledge base builder at: http://www.speech.cs.cmu.edu/tools/lmtool.html and store the resulting language model in src/apps/edu/cmu/sphinx/demo/baxter/baxter_trigram.lm
 
-If the dictionary, either acoustic or text, does not contain some of the words you have included, you may augment these, located in models/acoustic/ and models/language/. There is a tutorial for training he acoustic model located here: http://cmusphinx.sourceforge.net/wiki/tutorialam
+If the dictionary, either acoustic or text, does not contain some of the words you have included, you may augment these, located in models/acoustic/ and models/language/. For a tutorial on how to add words to the languag model, see: myknowledge-killer.blogspot.com/2011/06/expanding-dictionary-of-acoustic-model.html
+
+There is also a tutorial provided by CMU for training the acoustic model located here: http://cmusphinx.sourceforge.net/wiki/tutorialam
 
 Once the language model has been changed, you will need to rebuild. Simply run: "ant -find demo.xml", and then you will be able to run through the normal python script (stt.py).
